# RoguePredictor

./: README.md  config.yaml  demo.py  install.sh  model_handler.py  predictor.py  pyproject.toml  requirements.txt  rouge_wave_analysis.py  test_system.py  utils.py
.github/workflows/: ci-cd-granite-ts.yml
data/: sample_wave_data.csv
src/rouge_wave_predictor/: __init__.py  data_loader.py  demo.py  model_handler.py  predictor.py  rouge_wave_analysis.py  visualizer.py
test/: run_tests.py  test_data_loader.py  test_granite_ts.py  test_integration.py  test_model_handler.py  test_predictor.py  test_real_model.py  test_system.py  test_utils.py  test_visualizer.py
tools/: install.sh
